# glfw-gyp

./: BUILD.gn  configure  defaults.gypi  glfw.gyp
src/win/: glfw_config.h
